Fix footer developer alignment

--- a/source/stylesheets/layout/_footer.scss
+++ b/source/stylesheets/layout/_footer.scss
@@ -182,6 +182,15 @@ $height--desktop: $line-height * 3rem;
 }
 
 .site-footer .developers {
+	position: relative;
+	right: 50%;
+	left: 50%;
+
+	width: 100vw;
+
+	margin-right: -50vw;
+	margin-left: -50vw;
+
 	font-weight: normal;
 	font-size: ms(-2);
 	line-height: $line-height * 2;
